--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: #282828;
     color: #E4E6EB;
     text-align: center;
+    font-family: 'Open Sans', sans-serif;
 }
 
 h1 {
@@ -9,6 +10,19 @@ h1 {
 }
 
 body .header {
-    padding-top: 10px;
-    size: 40px;
+    padding-top: 2%;
+    font-size: 200%;
+}
+
+body .main {
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 2%;
+    text-align: justify;
+}
+
+body h2 {
+    padding-top: 2%;
+    font-size: 140%;
+    color: #B0B3B8;
 }
