--- a/style.css
+++ b/style.css
@@ -74,8 +74,8 @@ body h2 {
 
     position: relative;
 
-    top:5%;
-    left: 5%;
+    top:3%;
+    left:3%;
 
     justify-content: space-evenly;
     align-items: center;
@@ -84,12 +84,15 @@ body h2 {
     width: 30%;
     height: 30%;
 
-    margin: 0;
-    padding:0;
+    margin: 0.2vw;
+    padding: 0;
 
     float:left;
     clear:none;
 
     font-size: 5vw;
 
+    filter: drop-shadow(0.25rem 0.25rem 1rem rgb(255, 255, 255));
+
 }
+
